--- a/pages/all-titles.html
+++ b/pages/all-titles.html
@@ -63,7 +63,7 @@
           ${title.title} - ${title.years_of_experience} years
           <div>
             <button class="btn btn-sm btn-warning" onclick="editTitle('${title._id}', '${title.title}', '${title.years_of_experience}')">Edit</button>
-            <button class="btn btn-sm btn-danger" onclick="deleteTitle('${title._id}', this)">Delete</button>
+            <button class="btn btn-sm btn-danger" onclick="deleteTitle('${title._id}', '${title.title}', this)">Delete</button>
           </div>
         `;
         titleList.appendChild(listItem);
@@ -78,23 +78,25 @@
       window.location.href = url;
     }
 
-    function deleteTitle(id, button) {
-      fetch('/delete-title', {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json',
-        },
-        body: JSON.stringify({ _id: id }),
-      })
-      .then(response => {
-        if (!response.ok) {
-          throw new Error('Network response was not ok');
-        }
-        // Remove the title from the DOM
-        const listItem = button.closest('li');
-        listItem.remove();
-      })
-      .catch(error => console.error('Error:', error));
+    function deleteTitle(id, title, button) {
+      if (confirm(`Are you sure you want to delete the title "${title}" and all related courses?`)) {
+        fetch('/delete-title', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json',
+          },
+          body: JSON.stringify({ _id: id }),
+        })
+        .then(response => {
+          if (!response.ok) {
+            throw new Error('Network response was not ok');
+          }
+          // Remove the title from the DOM
+          const listItem = button.closest('li');
+          listItem.remove();
+        })
+        .catch(error => console.error('Error:', error));
+      }
     }
   </script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
