--- a/pages/main.html
+++ b/pages/main.html
@@ -12,6 +12,14 @@
     .card {
       margin-bottom: 20px;
     }
+    .gif-container {
+      text-align: center;
+      margin-top: 20px;
+    }
+    .gif-container img {
+      max-width: 100%;
+      height: auto;
+    }
   </style>
 </head>
 <body>
@@ -35,6 +43,28 @@
             最後可以匯出這幾天日程表格的 PDF 檔案。
             每天可以輸入相關的標題或者不輸入。
           </p>
+          <div class="gif-container">
+            <img src="../GIF/planner.gif" alt="Planner 使用示範">
+            <p>此 GIF 演示了如何生成日程表格並拖拉課程並匯出 PDF 檔案。</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card-header">
+          <h2>Combine</h2>
+        </div>
+        <div class="card-body">
+          <p>
+            <a href="/pages/combine.html" class="btn btn-primary">前往 Combine</a>
+          </p>
+          <p>
+            將多個日程表格合併成一個，以便更好地管理和查看。您可以選擇需要合併的日程，然後點擊合併按鈕來生成新的日程表。
+          </p>
+          <div class="gif-container">
+            <img src="../GIF/Combine.gif" alt="Combine 使用示範">
+            <p>此 GIF 演示了如何選擇和合併多個日程表。</p>
+          </div>
         </div>
       </div>
 
@@ -53,27 +83,6 @@
         </div>
       </div>
 
-      <!-- <div class="card">
-        <div class="card-header">
-          <h2>Add New Course</h2>
-        </div>
-        <div class="card-body">
-          <p>
-            <a href="add-course.html" class="btn btn-primary">前往 Add New Course</a>
-          </p>
-          <p>
-            可以新增課程，包含以下欄位：
-            <ul>
-              <li>Course Title (下拉列表)</li>
-              <li>Topic (手動輸入)</li>
-              <li>Content (手動輸入)</li>
-              <li>Duration (手動輸入)</li>
-              <li>Presenters (可以勾選多個的表)</li>
-            </ul>
-          </p>
-        </div>
-      </div> -->
-
       <div class="card">
         <div class="card-header">
           <h2>Titles</h2>
@@ -89,20 +98,6 @@
         </div>
       </div>
 
-      <!-- <div class="card">
-        <div class="card-header">
-          <h2>Add New Course Title</h2>
-        </div>
-        <div class="card-body">
-          <p>
-            <a href="add-title.html" class="btn btn-primary">前往 Add New Course Title</a>
-          </p>
-          <p>
-            裡面有一個文字框可以輸入 Course Title。
-          </p>
-        </div>
-      </div> -->
-
       <div class="card">
         <div class="card-header">
           <h2>Presenters</h2>
@@ -117,20 +112,6 @@
           </p>
         </div>
       </div>
-
-      <!-- <div class="card">
-        <div class="card-header">
-          <h2>Add New Presenter</h2>
-        </div>
-        <div class="card-body">
-          <p>
-            <a href="add-presenter.html" class="btn btn-primary">前往 Add New Presenter</a>
-          </p>
-          <p>
-            裡面有一個文字框可以輸入 Presenter Name。
-          </p>
-        </div>
-      </div> -->
     </div>
   </div>
 
@@ -149,4 +130,3 @@
   </script>
 </body>
 </html>
-
