--- a/pages/main.html
+++ b/pages/main.html
@@ -43,9 +43,15 @@
             最後可以匯出這幾天日程表格的 PDF 檔案。
             每天可以輸入相關的標題或者不輸入。
           </p>
-          <div class="gif-container">
-            <img src="../GIF/planner.gif" alt="Planner 使用示範">
-            <p>此 GIF 演示了如何生成日程表格並拖拉課程並匯出 PDF 檔案。</p>
+          <div class="row gif-container">
+            <div class="col-md-6">
+              <img src="../GIF/Planner.gif" alt="Planner 使用示範 1">
+              <p>此 GIF 演示了如何生成日程表格並拖拉課程。</p>
+            </div>
+            <div class="col-md-6">
+              <img src="../GIF/Planner-2.gif" alt="Planner 使用示範 2">
+              <p>此 GIF 演示了如何篩選課程並匯出 PDF 檔案。</p>
+            </div>
           </div>
         </div>
       </div>
@@ -61,9 +67,35 @@
           <p>
             將多個日程表格合併成一個，以便更好地管理和查看。您可以選擇需要合併的日程，然後點擊合併按鈕來生成新的日程表。
           </p>
-          <div class="gif-container">
-            <img src="../GIF/Combine.gif" alt="Combine 使用示範">
-            <p>此 GIF 演示了如何選擇和合併多個日程表。</p>
+          <div class="row gif-container">
+            <div class="col-md-6">
+              <img src="../GIF/Combine.gif" alt="Combine 使用示範 1">
+              <p>此 GIF 演示了如何選擇和合併多個日程表。</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card-header">
+          <h2>訂餐與住宿統計表</h2>
+        </div>
+        <div class="card-body">
+          <p>
+            <a href="/pages/table.html" class="btn btn-primary">前往 訂餐與住宿統計表</a>
+          </p>
+          <p>
+            使用者可以選擇日期並按下按鈕生成表格。表格可以統計人數，最後可以下載 PDF 檔案。
+          </p>
+          <div class="row gif-container">
+            <div class="col-md-6">
+              <img src="../GIF/Table.gif" alt="訂餐與住宿統計表 使用示範 1">
+              <p>此 GIF 演示了如何選擇日期並生成統計表格。</p>
+            </div>
+            <div class="col-md-6">
+              <img src="../GIF/Table-2.gif" alt="訂餐與住宿統計表 使用示範 2">
+              <p>此 GIF 演示了如何下載統計表格為 PDF 檔案。</p>
+            </div>
           </div>
         </div>
       </div>
