--- a/pages/add-presenter.html
+++ b/pages/add-presenter.html
@@ -28,7 +28,7 @@
 
       const presenterName = document.getElementById('presenterName').value;
 
-      fetch('/add-presenter', {
+      fetch('/api/add-presenter', {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json',
