--- a/pages/edit-course.html
+++ b/pages/edit-course.html
@@ -47,7 +47,7 @@
       let course; // Variable to store current course data
 
       // Fetch and populate presenters
-      fetch('/presenters')
+      fetch('/api/presenters')
         .then(response => {
           if (!response.ok) {
             throw new Error('Network response was not ok ' + response.statusText);
@@ -79,7 +79,7 @@
           });
 
           // Fetch course data and set form values
-          return fetch('/courses');
+          return fetch('/api/courses');
         })
         .then(response => response.json())
         .then(courses => {
@@ -118,7 +118,7 @@
           presenter: Array.from(document.querySelectorAll('#presenterList input:checked')).map(cb => cb.value)
         };
 
-        fetch('/update-course', {
+        fetch('/api/update-course', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json',
@@ -143,7 +143,7 @@
       });
 
       // Fetch and populate titles
-      fetch('/titles')
+      fetch('/api/titles')
         .then(response => {
           if (!response.ok) {
             throw new Error('Network response was not ok ' + response.statusText);
