--- a/pages/edit-presenter.html
+++ b/pages/edit-presenter.html
@@ -34,7 +34,7 @@
 
         const newName = document.getElementById('presenterName').value;
 
-        fetch('/update-presenter', {
+        fetch('/api/update-presenter', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json',
