--- a/pages/add-course.html
+++ b/pages/add-course.html
@@ -100,7 +100,7 @@
   
       const newCourse = { title, topic, content, duration, presenter };
   
-      fetch('/api/add-course', {
+      fetch('/add-course', {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json',
