--- a/pages/all-courses.html
+++ b/pages/all-courses.html
@@ -130,7 +130,7 @@
     }
 
     function deleteCourse(id) {
-      fetch('/api/delete-course', {
+      fetch('/delete-course', {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json',
