--- a/pages/all-presenters.html
+++ b/pages/all-presenters.html
@@ -50,7 +50,7 @@
       }
 
       function deletePresenter(id) {
-        fetch('/api/delete-presenter', {
+        fetch('/delete-presenter', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json',
