--- a/pages/add-title.html
+++ b/pages/add-title.html
@@ -33,7 +33,7 @@
       const courseTitle = document.getElementById('courseTitle').value;
       const yearsOfExperience = document.getElementById('yearsOfExperience').value;
 
-      fetch('/api/add-title', {
+      fetch('/add-title', {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json',
