--- a/pages/edit-title.html
+++ b/pages/edit-title.html
@@ -42,7 +42,7 @@
         const yearsOfExperience = document.getElementById('yearsOfExperience').value;
 
         // Update the title and related courses
-        fetch('/api/update-title', {
+        fetch('/update-title', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json',
@@ -57,7 +57,7 @@
         })
         .then(() => {
           // Update courses with the new title
-          fetch('/api/update-course-title', {
+          fetch('/update-course-title', {
             method: 'PUT',
             headers: {
               'Content-Type': 'application/json',
