--- a/pages/main.html
+++ b/pages/main.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>使用教學 - ReadMe</title>
+  <title>使用教學</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <style>
     .content {
@@ -62,7 +62,7 @@
         </div>
         <div class="card-body">
           <p>
-            <a href="/pages/combine.html" class="btn btn-primary">前往 Combine</a>
+            <a href="/pages/combine-pdf.html" class="btn btn-primary">前往 Combine</a>
           </p>
           <p>
             將多個日程表格合併成一個，以便更好地管理和查看。您可以選擇需要合併的日程，然後點擊合併按鈕來生成新的日程表。
