--- a/pages/planner.html
+++ b/pages/planner.html
@@ -105,6 +105,7 @@
         <label for="datepicker">Select Date:</label>
         <input type="text" id="datepicker" class="form-control" placeholder="Select date range">
         <button id="generateScheduleBtn" class="btn btn-primary mt-2">Generate Schedule</button>
+        <button id="downloadPdfBtn" class="btn btn-success download-btn mt-2">Download PDF</button>
       </div>
       <!-- Title Selector -->
       <div class="form-group">
@@ -121,7 +122,7 @@
         <div id="schedule-container">
           <!-- Schedule will be populated by JavaScript -->
         </div>
-        <button id="downloadPdfBtn" class="btn btn-success download-btn">Download PDF</button>
+        <!-- <button id="downloadPdfBtn" class="btn btn-success download-btn">Download PDF</button> -->
       </div>
 
       <!-- Course Details Sidebar -->
