--- a/pages/edit-course.html
+++ b/pages/edit-course.html
@@ -40,133 +40,137 @@
   </div>
 
   <script>
-    document.addEventListener('DOMContentLoaded', function() {
-      const urlParams = new URLSearchParams(window.location.search);
-      const id = urlParams.get('id');
+document.addEventListener('DOMContentLoaded', function() {
+  const urlParams = new URLSearchParams(window.location.search);
+  const id = urlParams.get('id');
 
-      let course; // Variable to store current course data
+  let course; // Variable to store current course data
 
-      // Fetch and populate presenters
-      fetch('/api/presenters')
-        .then(response => {
-          if (!response.ok) {
-            throw new Error('Network response was not ok ' + response.statusText);
-          }
-          return response.json();
-        })
-        .then(presenters => {
-          const presenterList = document.getElementById('presenterList');
-          presenterList.innerHTML = ''; // Clear existing content
-          presenters.forEach(presenter => {
-            const checkboxWrapper = document.createElement('div');
-            checkboxWrapper.className = 'form-check';
+  // Fetch and populate presenters
+  fetch('/api/presenters')
+    .then(response => {
+      if (!response.ok) {
+        throw new Error('Network response was not ok ' + response.statusText);
+      }
+      return response.json();
+    })
+    .then(presenters => {
+      const presenterList = document.getElementById('presenterList');
+      presenterList.innerHTML = ''; // Clear existing content
+      presenters.forEach(presenter => {
+        const checkboxWrapper = document.createElement('div');
+        checkboxWrapper.className = 'form-check';
 
-            const checkbox = document.createElement('input');
-            checkbox.type = 'checkbox';
-            checkbox.className = 'form-check-input';
-            checkbox.id = `presenter-${presenter._id}`;
-            checkbox.value = presenter._id;
-            checkbox.name = 'presenter';
+        const checkbox = document.createElement('input');
+        checkbox.type = 'checkbox';
+        checkbox.className = 'form-check-input';
+        checkbox.id = `presenter-${presenter.name}`;
+        checkbox.value = presenter.name;
+        checkbox.name = 'presenter';
 
-            const label = document.createElement('label');
-            label.className = 'form-check-label';
-            label.htmlFor = `presenter-${presenter._id}`;
-            label.textContent = presenter.name;
+        const label = document.createElement('label');
+        label.className = 'form-check-label';
+        label.htmlFor = `presenter-${presenter.name}`;
+        label.textContent = presenter.name;
 
-            checkboxWrapper.appendChild(checkbox);
-            checkboxWrapper.appendChild(label);
-            presenterList.appendChild(checkboxWrapper);
-          });
-
-          // Fetch course data and set form values
-          return fetch('/api/courses');
-        })
-        .then(response => response.json())
-        .then(courses => {
-          course = courses.find(c => c._id === id);
-          if (course) {
-            document.getElementById('title').value = course.title;
-            document.getElementById('topic').value = course.topic;
-            document.getElementById('content').value = course.content;
-            document.getElementById('duration').value = course.duration;
-
-            // Fetch presenters to get their IDs
-            return fetch('/api/presenters')
-              .then(response => response.json())
-              .then(presenters => {
-                // Set selected presenters using IDs
-                course.presenter.forEach(presenterName => {
-                  const presenter = presenters.find(p => p.name === presenterName);
-                  if (presenter) {
-                    const checkbox = document.getElementById(`presenter-${presenter._id}`);
-                    if (checkbox) {
-                      checkbox.checked = true;
-                    }
-                  }
-                });
-              });
-          } else {
-            console.error('Invalid course id:', id);
-            alert('Invalid course id. Please try again.');
-          }
-        })
-        .catch(error => console.error('Error:', error));
-
-      document.getElementById('editCourseForm').addEventListener('submit', function(event) {
-        event.preventDefault();
-
-        const updatedCourse = {
-          _id: id,
-          title: document.getElementById('title').value,
-          topic: document.getElementById('topic').value,
-          content: document.getElementById('content').value,
-          duration: parseInt(document.getElementById('duration').value),
-          presenter: Array.from(document.querySelectorAll('#presenterList input:checked')).map(cb => cb.value)
-        };
-
-        fetch('/update-course', {
-          method: 'POST',
-          headers: {
-            'Content-Type': 'application/json',
-          },
-          body: JSON.stringify([updatedCourse]),
-        })
-        .then(response => {
-          if (!response.ok) {
-            throw new Error('Network response was not ok');
-          }
-          alert('Course updated successfully!');
-          window.location.href = 'all-courses.html';
-        })
-        .catch(error => {
-          console.error('Error:', error);
-          alert('Failed to update course. Please try again.');
-        });
+        checkboxWrapper.appendChild(checkbox);
+        checkboxWrapper.appendChild(label);
+        presenterList.appendChild(checkboxWrapper);
       });
 
-      document.getElementById('backButton').addEventListener('click', function() {
-        window.history.back();
-      });
+      // Fetch course data and set form values
+      return fetch(`/api/courses/${id}`);
+    })
+    .then(response => {
+      if (!response.ok) {
+        throw new Error('Network response was not ok ' + response.statusText);
+      }
+      return response.json();
+    })
+    .then(courseData => {
+      course = courseData;
+      if (course) {
+        document.getElementById('title').value = course.title;
+        document.getElementById('topic').value = course.topic;
+        document.getElementById('content').value = course.content;
+        document.getElementById('duration').value = course.duration;
 
-      // Fetch and populate titles
-      fetch('/api/titles')
-        .then(response => {
-          if (!response.ok) {
-            throw new Error('Network response was not ok ' + response.statusText);
-          }
-          return response.json();
-        })
-        .then(titles => {
-          const titleSelect = document.getElementById('title');
-          titles.forEach(title => {
-            const option = document.createElement('option');
-            option.value = title.title;
-            option.text = title.title;
-            titleSelect.add(option);
+        // Set selected presenters
+        if (course.presenter && Array.isArray(course.presenter)) {
+          course.presenter.forEach(p => {
+            const checkbox = document.getElementById(`presenter-${p}`);
+            if (checkbox) {
+              checkbox.checked = true;
+            } else {
+              console.warn(`Checkbox for presenter ID ${p} not found`);
+            }
           });
-        })
-        .catch(error => console.error('Error fetching titles:', error));
+        } else {
+          console.warn('No presenters found in course data or data is not an array.');
+        }
+      } else {
+        console.error('Invalid course id:', id);
+        alert('Invalid course id. Please try again.');
+      }
+    })
+    .catch(error => console.error('Error:', error));
+
+  document.getElementById('editCourseForm').addEventListener('submit', function(event) {
+    event.preventDefault();
+
+    const updatedCourse = {
+      _id: id,
+      title: document.getElementById('title').value,
+      topic: document.getElementById('topic').value,
+      content: document.getElementById('content').value,
+      duration: parseInt(document.getElementById('duration').value),
+      presenter: Array.from(document.querySelectorAll('#presenterList input:checked')).map(cb => cb.value)
+    };
+
+    fetch('/update-course', {
+      method: 'POST',
+      headers: {
+        'Content-Type': 'application/json',
+      },
+      body: JSON.stringify([updatedCourse]),
+    })
+    .then(response => {
+      if (!response.ok) {
+        throw new Error('Network response was not ok');
+      }
+      alert('Course updated successfully!');
+      window.location.href = 'all-courses.html';
+    })
+    .catch(error => {
+      console.error('Error:', error);
+      alert('Failed to update course. Please try again.');
     });
+  });
+
+  document.getElementById('backButton').addEventListener('click', function() {
+    window.history.back();
+  });
+
+  // Fetch and populate titles
+  fetch('/api/titles')
+    .then(response => {
+      if (!response.ok) {
+        throw new Error('Network response was not ok ' + response.statusText);
+      }
+      return response.json();
+    })
+    .then(titles => {
+      const titleSelect = document.getElementById('title');
+      titles.forEach(title => {
+        const option = document.createElement('option');
+        option.value = title.title;
+        option.text = title.title;
+        titleSelect.add(option);
+      });
+    })
+    .catch(error => console.error('Error fetching titles:', error));
+});
+
   </script>
 </body>
 </html>
