--- a/pages/all-presenters.html
+++ b/pages/all-presenters.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Display All Presenters</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-  <style>
+  <!-- <style>
     .btn-danger {
         display: none;
     }
-  </style>
+  </style> -->
 </head>
 <body>
   <div id="menu-bar"></div> 
