--- a/pages/all-titles.html
+++ b/pages/all-titles.html
@@ -19,11 +19,10 @@
       <label for="experienceFilter">Filter by Years of Experience:</label>
       <select id="experienceFilter" class="form-control">
         <option value="all">All</option>
-        <option value="0">0 years</option>
-        <option value="1">1 year</option>
-        <option value="2">2 years</option>
-        <option value="3">3 years</option>
-        <option value="4">4 years</option>
+        <option value="0-1">0-1 years</option>
+        <option value="1-2">1-2 years</option>
+        <option value="2-3">2-3 years</option>
+        <option value="3-4">3-4 years</option>
       </select>
     </div>
 
@@ -55,7 +54,13 @@
     function updateTitleList(data, filter) {
       const titleList = document.getElementById('titleList');
       titleList.innerHTML = '';
-      const filteredData = filter === 'all' ? data : data.filter(title => title.years_of_experience == filter);
+
+      let filteredData = data;
+      if (filter !== 'all') {
+        const [min, max] = filter.split('-').map(Number);
+        filteredData = data.filter(title => title.years_of_experience >= min && title.years_of_experience < max);
+      }
+
       filteredData.forEach((title) => {
         const listItem = document.createElement('li');
         listItem.className = 'list-group-item d-flex justify-content-between align-items-center';
@@ -69,7 +74,6 @@
         titleList.appendChild(listItem);
       });
     }
-
     function editTitle(id, name, years_of_experience) {
       const url = new URL('/pages/edit-title.html', window.location.origin);
       url.searchParams.append('id', id);
