--- a/pages/edit-title.html
+++ b/pages/edit-title.html
@@ -18,7 +18,7 @@
       </div>
       <div class="form-group">
         <label for="yearsOfExperience">Years of Experience:</label>
-        <input type="number" class="form-control" id="yearsOfExperience" name="yearsOfExperience" min="0" required>
+        <input type="number" class="form-control" id="yearsOfExperience" name="yearsOfExperience" min="0" step="0.1" max="4" required>
       </div>
       <button type="submit" class="btn btn-primary">Save Changes</button>
       <button type="button" class="btn btn-secondary" id="backButton">Go Back</button>
