Fix: auto-size col

--- a/pages/table.html
+++ b/pages/table.html
@@ -296,6 +296,16 @@
           });
 
           const ws = XLSX.utils.aoa_to_sheet(ws_data);
+
+          // Set column widths to auto-size
+          const colWidths = ws_data[0].map((col, i) => ({
+            wch: Math.max(
+              ...ws_data.map(row => (row[i] ? row[i].toString().length : 10))
+            )
+          }));
+
+          ws['!cols'] = colWidths;
+
           XLSX.utils.book_append_sheet(wb, ws, `Table ${index + 1}`);
         });
 
