Add: color field

--- a/pages/edit-title.html
+++ b/pages/edit-title.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Edit Title</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/spectrum/1.8.1/spectrum.min.css">
 </head>
 <body>
   <div id="menu-bar"></div> 
@@ -20,26 +21,49 @@
         <label for="yearsOfExperience">Years of Experience:</label>
         <input type="number" class="form-control" id="yearsOfExperience" name="yearsOfExperience" min="0" step="0.1" max="4" required>
       </div>
+      <div class="form-group">
+        <label for="color">Select Color:</label>
+        <input type="text" class="form-control" id="color" name="color" required>
+      </div>
       <button type="submit" class="btn btn-primary">Save Changes</button>
       <button type="button" class="btn btn-secondary" id="backButton">Go Back</button>
     </form>
   </div>
 
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/spectrum/1.8.1/spectrum.min.js"></script>
   <script>
     document.addEventListener('DOMContentLoaded', function() {
       const urlParams = new URLSearchParams(window.location.search);
       const id = urlParams.get('id');
-      const oldTitle = urlParams.get('name');
-      const yearsOfExperience = urlParams.get('years_of_experience');
-      
-      document.getElementById('titleName').value = oldTitle;
-      document.getElementById('yearsOfExperience').value = yearsOfExperience;
 
-      document.getElementById('editTitleForm').addEventListener('submit', function(event) {
+      // Fetch the current title details from the server
+      fetch(`/get-title?id=${id}`)
+        .then(response => response.json())
+        .then(data => {
+          $('#titleName').val(data.title);
+          $('#yearsOfExperience').val(data.years_of_experience);
+          $('#color').spectrum({
+            color: data.color,
+            showPalette: true,
+            palette: [
+              ['#ff0000', '#ff8000', '#ffff00', '#80ff00', '#00ff00'],
+              ['#00ff80', '#00ffff', '#0080ff', '#0000ff', '#8000ff'],
+              ['#ff00ff', '#ff0080', '#000000', '#808080', '#ffffff']
+            ],
+            preferredFormat: "hex"
+          });
+        })
+        .catch(error => console.error('Error fetching title details:', error));
+
+      $('#editTitleForm').on('submit', function(event) {
         event.preventDefault();
 
-        const newTitle = document.getElementById('titleName').value;
-        const yearsOfExperience = document.getElementById('yearsOfExperience').value;
+        const newTitle = $('#titleName').val();
+        const yearsOfExperience = $('#yearsOfExperience').val();
+        const color = $('#color').spectrum('get').toHexString();
 
         // Update the title and related courses
         fetch('/update-title', {
@@ -47,7 +71,7 @@
           headers: {
             'Content-Type': 'application/json',
           },
-          body: JSON.stringify([{ _id: id, title: newTitle, years_of_experience: Number(yearsOfExperience) }]),
+          body: JSON.stringify([{ _id: id, title: newTitle, years_of_experience: Number(yearsOfExperience), color: color }]),
         })
         .then(response => {
           if (!response.ok) {
@@ -62,7 +86,7 @@
             headers: {
               'Content-Type': 'application/json',
             },
-            body: JSON.stringify({ oldTitle, newTitle })
+            body: JSON.stringify({ oldTitle: data.title, newTitle: newTitle })
           })
           .then(response => {
             if (!response.ok) {
@@ -85,22 +109,17 @@
         });
       });
 
-      document.getElementById('backButton').addEventListener('click', function() {
+      $('#backButton').on('click', function() {
         window.history.back();
       });
+
+      fetch('menu.html')
+        .then(response => response.text())
+        .then(data => {
+          $('#menu-bar').html(data);
+        })
+        .catch(error => console.error('Error loading menu:', error));
     });
-  </script>
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <script>
-    // JavaScript to dynamically load menu bar
-    fetch('menu.html')
-      .then(response => response.text())
-      .then(data => {
-        document.getElementById('menu-bar').innerHTML = data;
-      })
-      .catch(error => console.error('Error loading menu:', error));
   </script>
 </body>
 </html>
