--- a/pages/add-title.html
+++ b/pages/add-title.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Add Course Title</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/spectrum/1.8.1/spectrum.min.css">
 </head>
 <body>
   <div id="menu-bar"></div>
@@ -20,59 +21,78 @@
         <label for="yearsOfExperience">Years of Experience:</label>
         <input type="number" class="form-control" id="yearsOfExperience" name="yearsOfExperience" min="0" step="0.1" max="4" required>
       </div>
+      <div class="form-group">
+        <label for="color">Select Color:</label>
+        <input type="text" class="form-control" id="color" name="color" required>
+      </div>
       <button type="submit" class="btn btn-primary">Add Title</button>
       <button type="button" class="btn btn-secondary" id="clearButton">Clear</button>
       <button type="button" class="btn btn-secondary" id="backButton">Go Back</button>
     </form>
   </div>
 
-  <script>
-    document.getElementById('addCourseForm').addEventListener('submit', function(event) {
-      event.preventDefault();
-
-      const courseTitle = document.getElementById('courseTitle').value;
-      const yearsOfExperience = document.getElementById('yearsOfExperience').value;
-
-      fetch('/add-title', {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json',
-        },
-        body: JSON.stringify({ title: courseTitle, years_of_experience: yearsOfExperience }),
-      })
-      .then(response => {
-        if (!response.ok) {
-          throw new Error('Network response was not ok');
-        }
-        return response.text();
-      })
-      .then(data => {
-        alert('Title added successfully: ' + data);
-        window.location.href = 'all-titles.html';
-      })
-      .catch(error => {
-        console.error('Error:', error);
-        alert('Failed to add title. Please try again.');
-      });
-    });
-
-    document.getElementById('clearButton').addEventListener('click', function() {
-      document.getElementById('addCourseForm').reset();
-    });
-
-    document.getElementById('backButton').addEventListener('click', function() {
-      window.history.back();
-    });
-
-    fetch('menu.html')
-      .then(response => response.text())
-      .then(data => {
-        document.getElementById('menu-bar').innerHTML = data;
-      })
-      .catch(error => console.error('Error loading menu:', error));
-  </script>
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/spectrum/1.8.1/spectrum.min.js"></script>
+  <script>
+    $(document).ready(function() {
+      // Initialize Spectrum color picker
+      $("#color").spectrum({
+        showPalette: true,
+        palette: [
+          ['#ff0000', '#ff8000', '#ffff00', '#80ff00', '#00ff00'],
+          ['#00ff80', '#00ffff', '#0080ff', '#0000ff', '#8000ff'],
+          ['#ff00ff', '#ff0080', '#000000', '#808080', '#ffffff']
+        ],
+        preferredFormat: "hex"
+      });
+
+      $('#addCourseForm').on('submit', function(event) {
+        event.preventDefault();
+
+        const courseTitle = $('#courseTitle').val();
+        const yearsOfExperience = $('#yearsOfExperience').val();
+        const color = $('#color').spectrum('get').toHexString();
+
+        fetch('/add-title', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json',
+          },
+          body: JSON.stringify({ title: courseTitle, years_of_experience: yearsOfExperience, color: color }),
+        })
+        .then(response => {
+          if (!response.ok) {
+            throw new Error('Network response was not ok');
+          }
+          return response.text();
+        })
+        .then(data => {
+          alert('Title added successfully: ' + data);
+          window.location.href = 'all-titles.html';
+        })
+        .catch(error => {
+          console.error('Error:', error);
+          alert('Failed to add title. Please try again.');
+        });
+      });
+
+      $('#clearButton').on('click', function() {
+        $('#addCourseForm')[0].reset();
+      });
+
+      $('#backButton').on('click', function() {
+        window.history.back();
+      });
+
+      fetch('menu.html')
+        .then(response => response.text())
+        .then(data => {
+          $('#menu-bar').html(data);
+        })
+        .catch(error => console.error('Error loading menu:', error));
+    });
+  </script>
 </body>
 </html>
