Fix: update-title color

--- a/pages/edit-title.html
+++ b/pages/edit-title.html
@@ -55,6 +55,9 @@
             ],
             preferredFormat: "hex"
           });
+
+          // Store data in a variable to use in the fetch request
+          window.currentData = data;
         })
         .catch(error => console.error('Error fetching title details:', error));
 
@@ -80,13 +83,13 @@
           return response.json();
         })
         .then(() => {
-          // Update courses with the new title
+          // Use the stored data to update courses with the new title
           fetch('/update-course-title', {
             method: 'PUT',
             headers: {
               'Content-Type': 'application/json',
             },
-            body: JSON.stringify({ oldTitle: data.title, newTitle: newTitle })
+            body: JSON.stringify({ oldTitle: window.currentData.title, newTitle: newTitle })
           })
           .then(response => {
             if (!response.ok) {
