--- a/pages/main.html
+++ b/pages/main.html
@@ -45,11 +45,11 @@
           </p>
           <div class="row gif-container">
             <div class="col-md-6">
-              <img src="../GIF/Planner.gif" alt="Planner 使用示範 1">
+              <img src="../images/Planner.gif" alt="Planner 使用示範 1">
               <p>此 GIF 演示了如何生成日程表格並拖拉課程。</p>
             </div>
             <div class="col-md-6">
-              <img src="../GIF/Planner-2.gif" alt="Planner 使用示範 2">
+              <img src="../images/Planner-2.gif" alt="Planner 使用示範 2">
               <p>此 GIF 演示了如何篩選課程並匯出 PDF 檔案。</p>
             </div>
           </div>
@@ -69,7 +69,7 @@
           </p>
           <div class="row gif-container">
             <div class="col-md-6">
-              <img src="../GIF/Combine.gif" alt="Combine 使用示範 1">
+              <img src="../images/Combine.gif" alt="Combine 使用示範 1">
               <p>此 GIF 演示了如何選擇和合併多個日程表。</p>
             </div>
           </div>
@@ -89,11 +89,11 @@
           </p>
           <div class="row gif-container">
             <div class="col-md-6">
-              <img src="../GIF/Table.gif" alt="訂餐與住宿統計表 使用示範 1">
+              <img src="../images/Table.gif" alt="訂餐與住宿統計表 使用示範 1">
               <p>此 GIF 演示了如何選擇日期並生成統計表格。</p>
             </div>
             <div class="col-md-6">
-              <img src="../GIF/Table-2.gif" alt="訂餐與住宿統計表 使用示範 2">
+              <img src="../images/Table-2.gif" alt="訂餐與住宿統計表 使用示範 2">
               <p>此 GIF 演示了如何下載統計表格為 PDF 檔案。</p>
             </div>
           </div>
