--- a/pages/planner.html
+++ b/pages/planner.html
@@ -104,9 +104,9 @@
       <div class="form-group">
         <label for="datepicker">Select Date:</label>
         <input type="text" id="datepicker" class="form-control" placeholder="Select date range">
-        <button id="generateScheduleBtn" class="btn btn-primary mt-2">Generate Schedule</button>
-        <button id="downloadPdfBtn" class="btn btn-success download-btn mt-2">Download PDF</button>
-        <button id="downloadExcelBtn" class="btn btn-info download-btn mt-2">Download Excel</button>
+        <button id="generateScheduleBtn" class="btn btn-primary mt-2">生成表格</button>
+        <button id="downloadPdfBtn" class="btn btn-success download-btn mt-2">PDF 下載</button>
+        <button id="downloadExcelBtn" class="btn btn-info download-btn mt-2">Excel 下載</button>
       </div>
       <!-- Title Selector -->
       <div class="form-group">
@@ -308,7 +308,7 @@
                 </tbody>
               </table>
             </div>
-            <button class="btn btn-danger clear-btn">Clear Schedule</button>
+            <button class="btn btn-danger clear-btn">清空表格</button>
           `;
           scheduleContainer.appendChild(dayElement);
         });
