--- a/pages/main.html
+++ b/pages/main.html
@@ -45,12 +45,13 @@
           </p>
           <div class="row gif-container">
             <div class="col-md-6">
-              <img src="../images/Planner.gif" alt="Planner 使用示範 1">
-              <p>此 GIF 演示了如何生成日程表格並拖拉課程。</p>
+              <img src="../images/Planner-step1.png" alt="Planner 使用示範 1">
             </div>
             <div class="col-md-6">
-              <img src="../images/Planner-2.gif" alt="Planner 使用示範 2">
-              <p>此 GIF 演示了如何篩選課程並匯出 PDF 檔案。</p>
+              <img src="../images/Planner-step2.png" alt="Planner 使用示範 2">
+            </div>
+            <div class="col-md-6">
+              <img src="../images/Planner-step3.png" alt="Planner 使用示範 2">
             </div>
           </div>
         </div>
