--- a/pages/main.html
+++ b/pages/main.html
@@ -20,6 +20,10 @@
       max-width: 100%;
       height: auto;
     }
+    .carousel-item img {
+      max-width: 75%; /* Set the maximum width for the carousel images */
+      margin: 0 auto; /* Center the images */
+    }
   </style>
 </head>
 <body>
@@ -43,16 +47,26 @@
             最後可以匯出這幾天日程表格的 PDF 檔案。
             每天可以輸入相關的標題或者不輸入。
           </p>
-          <div class="row gif-container">
-            <div class="col-md-6">
-              <img src="../images/Planner-step1.png" alt="Planner 使用示範 1">
+          <div id="plannerCarousel" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="../images/Planner-step1.png" class="d-block w-100" alt="Planner 使用示範 1">
+              </div>
+              <div class="carousel-item">
+                <img src="../images/Planner-step2.png" class="d-block w-100" alt="Planner 使用示範 2">
+              </div>
+              <div class="carousel-item">
+                <img src="../images/Planner-step3.png" class="d-block w-100" alt="Planner 使用示範 3">
+              </div>
             </div>
-            <div class="col-md-6">
-              <img src="../images/Planner-step2.png" alt="Planner 使用示範 2">
-            </div>
-            <div class="col-md-6">
-              <img src="../images/Planner-step3.png" alt="Planner 使用示範 2">
-            </div>
+            <a class="carousel-control-prev" href="#plannerCarousel" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#plannerCarousel" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
           </div>
         </div>
       </div>
