--- a/pages/main.html
+++ b/pages/main.html
@@ -24,6 +24,20 @@
       max-width: 75%; /* Set the maximum width for the carousel images */
       margin: 0 auto; /* Center the images */
     }
+    .carousel-control-prev,
+    .carousel-control-next {
+      color: black;
+      font-size: 2rem;
+      opacity: 1;
+    }
+    .carousel-control-prev:hover,
+    .carousel-control-next:hover {
+      color: black;
+    }
+    .carousel-control-prev span,
+    .carousel-control-next span {
+      font-size: 3rem;
+    }
   </style>
 </head>
 <body>
@@ -50,21 +64,21 @@
           <div id="plannerCarousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="../images/Planner-step1.png" class="d-block w-100" alt="Planner 使用示範 1">
+                <img src="../images/Planner-step1.png" class="d-block" alt="Planner 使用示範 1">
               </div>
               <div class="carousel-item">
-                <img src="../images/Planner-step2.png" class="d-block w-100" alt="Planner 使用示範 2">
+                <img src="../images/Planner-step2.png" class="d-block" alt="Planner 使用示範 2">
               </div>
               <div class="carousel-item">
-                <img src="../images/Planner-step3.png" class="d-block w-100" alt="Planner 使用示範 3">
+                <img src="../images/Planner-step3.png" class="d-block" alt="Planner 使用示範 3">
               </div>
             </div>
             <a class="carousel-control-prev" href="#plannerCarousel" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span aria-hidden="true">&lt;</span>
               <span class="sr-only">Previous</span>
             </a>
             <a class="carousel-control-next" href="#plannerCarousel" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span aria-hidden="true">&gt;</span>
               <span class="sr-only">Next</span>
             </a>
           </div>
@@ -102,15 +116,23 @@
           <p>
             使用者可以選擇日期並按下按鈕生成表格。表格可以統計人數，最後可以下載 PDF 檔案。
           </p>
-          <div class="row gif-container">
-            <div class="col-md-6">
-              <img src="../images/Table.gif" alt="訂餐與住宿統計表 使用示範 1">
-              <p>此 GIF 演示了如何選擇日期並生成統計表格。</p>
+          <div id="tableCarousel" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="../images/Table-step1.png" class="d-block" alt="訂餐與住宿統計表 使用示範 1">
+              </div>
+              <div class="carousel-item">
+                <img src="../images/Table-step2.png" class="d-block" alt="訂餐與住宿統計表 使用示範 2">
+              </div>
             </div>
-            <div class="col-md-6">
-              <img src="../images/Table-2.gif" alt="訂餐與住宿統計表 使用示範 2">
-              <p>此 GIF 演示了如何下載統計表格為 PDF 檔案。</p>
-            </div>
+            <a class="carousel-control-prev" href="#tableCarousel" role="button" data-slide="prev">
+              <span aria-hidden="true">&lt;</span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#tableCarousel" role="button" data-slide="next">
+              <span aria-hidden="true">&gt;</span>
+              <span class="sr-only">Next</span>
+            </a>
           </div>
         </div>
       </div>
