--- a/pages/table.html
+++ b/pages/table.html
@@ -22,6 +22,7 @@
     }
     .button-group {
       display: flex;
+      justify-content: flex-end; /* Align buttons to the right */
       gap: 10px;
       margin-top: 20px;
     }
