Upload Combine png

--- a/pages/main.html
+++ b/pages/main.html
@@ -96,10 +96,11 @@
           <p>
             將多個日程表格合併成一個，以便更好地管理和查看。您可以選擇需要合併的日程，然後點擊合併按鈕來生成新的日程表。
           </p>
-          <div class="row gif-container">
-            <div class="col-md-6">
-              <img src="../images/Combine.gif" alt="Combine 使用示範 1">
-              <p>此 GIF 演示了如何選擇和合併多個日程表。</p>
+          <div id="tableCarousel" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="../images/Combine-step1.png" class="d-block" alt="合併 使用示範 1">
+              </div>
             </div>
           </div>
         </div>
