--- a/pages/main.html
+++ b/pages/main.html
@@ -96,7 +96,7 @@
           <p>
             將多個日程表格合併成一個，以便更好地管理和查看。您可以選擇需要合併的日程，然後點擊合併按鈕來生成新的日程表。
           </p>
-          <div id="tableCarousel" class="carousel slide" data-ride="carousel">
+          <div id="combineCarousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img src="../images/Combine-step1.png" class="d-block" alt="合併 使用示範 1">
