Fix: edit title and objectId

--- a/pages/edit-course.html
+++ b/pages/edit-course.html
@@ -132,7 +132,7 @@ document.addEventListener('DOMContentLoaded', function() {
           headers: {
               'Content-Type': 'application/json',
           },
-          body: JSON.stringify([updatedCourse]),
+          body: JSON.stringify(updatedCourse),
       })
       .then(response => {
           if (!response.ok) {
